<resources>
    <string name="app_name">LEADERBOAD</string>
    <string name="submit">Submit</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_submit_form">SubmitFormActivity</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_github_link">Project on Github (link)</string>
    <string name="action_submit">Submit</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_first_name">Not a valid first name</string>
    <string name="invalid_last_name">Not a valid last name</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_github_url">Not a valid url</string>
    <string name="submit_failed">Submit failed</string>
    <string name="confirmation_btn">Yes</string>
    <string name="confirmation_message">Are you sure ?</string>
    <string name="submission_success">submission successful</string>
    <string name="submission_fail">Submission not successful</string>
</resources>